--- a/memorygame/templates/index.html
+++ b/memorygame/templates/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Memória</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/jquery-3.7.1.min.js" defer></script>
-    <script src="../js/init.js" defer></script>
+    <script src="{% static '/js/jquery-3.7.1.min.js' %}" defer></script>
+    <script src="{% static '/js/init.js' %}"></script>
 </head>
 <body>
     <header class="container-fluid m-2 justify-content-center">
