--- a/memorygame/templates/laderboards.html
+++ b/memorygame/templates/laderboards.html
@@ -38,20 +38,18 @@
             </tbody>
         </table>
     </main>
-    <footer>
-        <div class="row">
-            <div class="col">
-                <p>Kauany Maria Cavalcante da Silva</p>
-                <p>Pedro Yohan Mendonça da Silva</p>
-            </div>
-            <div class="col">
-                <p>Todos os direitos reservados &copy;</p>
-                <p>IFRN - <em>Campus</em> Santa Cruz/RN</p>
-            </div>
-            <div class="col">
-                <p>Disciplina: Programação para Internet</p>
-                <p>Professor: Marcelo Figueiredo Barbosa Júnior</p>
-            </div>
+    <footer class="flex">
+        <div class="col">
+            <p>Kauany Maria Cavalcante da Silva</p>
+            <p>Pedro Yohan Mendonça da Silva</p>
+        </div>
+        <div class="col">
+            <p>Todos os direitos reservados &copy;</p>
+            <p>IFRN - <em>Campus</em> Santa Cruz/RN</p>
+        </div>
+        <div class="col">
+            <p>Disciplina: Programação para Internet</p>
+            <p>Professor: Marcelo Figueiredo Barbosa Júnior</p>
         </div>
     </footer>
 </body>
