--- a/memorygame/static/css/lbstyle.css
+++ b/memorygame/static/css/lbstyle.css
@@ -26,13 +26,13 @@ tbody td {
 }
 
 /* Zebra striping para as linhas da tabela */
-tbody tr:nth-child(even) {
+tbody tr {
     background-color: #f9f9f9;
 }
 
 /* Estilo ao passar o mouse sobre a linha */
 tbody tr:hover {
-    background-color: #f1f1f1;
+    background-color: #dddddd;
     cursor: pointer;
 }
 
