--- a/memorygame/templates/laderboards.html
+++ b/memorygame/templates/laderboards.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static '/css/lbstyle.css' %}">
     <title>Ranking</title>
 </head>
