--- a/memorygame/static/css/lbstyle.css
+++ b/memorygame/static/css/lbstyle.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
 /* Estilos para a tabela */
 table {
     width: 100%;
@@ -51,4 +55,28 @@ table, th, td {
 
 th, td {
     text-align: center;
+}
+
+/* Botões de filtro */
+.filter-buttons {
+    margin-bottom: 20px;
+}
+
+.filter-buttons .btn {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: rgb(179, 116, 0);
+    color: #fff;
+    border-radius: 5px;
+    margin-right: 10px;
+    font-size: 14px;
+}
+
+.filter-buttons .btn:hover {
+    background-color: rgb(134, 87, 0);
+}
+
+.filter-buttons .btn.active {
+    background-color: #ffbb00;
+    font-weight: bold;
 }
