--- a/memorygame/static/css/style.css
+++ b/memorygame/static/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
     background-color: #000;
     background-image: url('../imgs/naruto-uzumaki-3840x2160-13143.jpg');
