--- a/memorygame/templates/laderboards.html
+++ b/memorygame/templates/laderboards.html
@@ -4,7 +4,11 @@
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static '/css/lbstyle.css' %}">
     <title>Ranking</title>
@@ -13,10 +17,21 @@
     <header>
         <h1>Ranking de Partidas</h1>
     </header>
+    <nav>
+        <div class="filter-buttons">
+            <a href="?order=attempts" class="btn {% if current_order == 'attempts' %}active{% endif %}">
+                Menos Tentativas
+            </a>
+            <a href="?order=time" class="btn {% if current_order == 'time' %}active{% endif %}">
+                Menos Tempo
+            </a>
+        </div>
+    </nav>
     <main>
         <table>
             <thead>
                 <tr>
+                    <th>Posição</th>
                     <th>Nome</th>
                     <th>Tentativas</th>
                     <th>Data e Hora</th>
@@ -26,10 +41,11 @@
             <tbody>
                 {% for partida in partidas %}
                     <tr>
+                        <td>{{ forloop.counter }}º</td>
                         <td>{{ partida.name }}</td>
                         <td>{{ partida.attempts }}</td>
                         <td>{{ partida.datetime|date:"d/m/Y H:i" }}</td>
-                        <td>{{ partida.time|date:"H:i:s" }}</td>
+                        <td>{{ partida.formatted_time }}</td>
                     </tr>
                 {% empty %}
                     <tr>
