Sistema de login

--- a/memorygame/templates/index.html
+++ b/memorygame/templates/index.html
@@ -21,6 +21,9 @@
             Jogo da Memória de Naruto
         </h1>
     </header>
+    <nav>
+        <a href="http://localhost:8000/laderboards">Ranking<a/>
+    </nav>
     <main class="flex">
         <div class="score">
             <p>Tempo: <span id="timer">00:00:00</span></p>
