--- a/memorygame/templates/login.html
+++ b/memorygame/templates/login.html
@@ -8,11 +8,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    
+    <!-- Font Awesome (para os ícones) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/registerLogin.css' %}">
     <title>Login</title>
 </head>
 <body>
+    <nav class="nav-bar">
+        <div class="navigation">
+            <button class="nav-btn">
+                <i class="fas fa-trophy"></i>
+                <a href="http://localhost:8000/laderboards">Confira o Ranking!</a>
+            </button>
+        </div>
+    </nav>
     <main class="login-container">
         <h1>Login</h1>
         {% if error_message %}
