--- a/memorygame/static/css/style.css
+++ b/memorygame/static/css/style.css
@@ -25,6 +25,7 @@ header, footer, #end-game-form {
     background-color: rgb(221, 144, 0);
     border-radius: 12px;
     box-shadow: 1px 1px 1px black;
+    padding: 3px 0px;
 }
 
 .score {
@@ -131,4 +132,106 @@ footer p, header h1 {
     footer {
         flex-direction: column;
     }
+
+    footer > div {
+        width: 100%;
+    }
+
+    .nav-bar {
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .nav-bar > div {
+        width: 100%;
+    }
+    
+    .navigation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .filter-buttons {
+        display: flex;
+        align-items: flex-start;
+        gap: 10px;
+    }
+}
+
+
+.navigation {
+    display: flex;
+    justify-content: start;
+    margin-top: 30px;
+    width: 80%;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+/* Botões de navegação */
+.nav-btn {
+    display: flex;
+    align-items: center;
+    background-color: rgb(221, 144, 0);
+    border: none;
+    padding: 10px 15px;
+    margin-right: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.nav-btn:hover {
+    background-color: rgb(173, 113, 0);
+}
+
+.nav-btn i {
+    font-size: 18px;
+    color: #ffffff;
+    margin-right: 10px;
+}
+
+.nav-btn a, form > button {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.nav-btn a:hover {
+    text-decoration: underline;
+}
+
+/* Botões de filtro */
+.filter-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.filter-buttons .btn {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: rgb(179, 116, 0);
+    color: #fff;
+    border-radius: 5px;
+    margin-left: 10px;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.filter-buttons .btn:hover {
+    background-color: rgb(134, 87, 0);
+}
+
+.filter-buttons .btn.active {
+    background-color: #ffbb00;
+    font-weight: bold;
 }
