--- a/memorygame/templates/laderboards.html
+++ b/memorygame/templates/laderboards.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
+    <!-- Font Awesome (para os ícones) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <link rel="stylesheet" type="text/css" href="{% static '/css/style.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static '/css/lbstyle.css' %}">
     <title>Ranking</title>
@@ -17,7 +20,17 @@
     <header>
         <h1>Ranking de Partidas</h1>
     </header>
-    <nav>
+    <nav class="nav-bar">
+        <div class="navigation">
+            <button class="nav-btn">
+                <i class="fas fa-user-cog"></i>
+                <a href="http://localhost:8000/admin">Administrador</a>
+            </button>
+            <button class="nav-btn">
+                <i class="fas fa-gamepad"></i>
+                <a href="http://localhost:8000/">Jogo</a>
+            </button>
+        </div>
         <div class="filter-buttons">
             <a href="?order=attempts" class="btn {% if current_order == 'attempts' %}active{% endif %}">
                 Menos Tentativas
@@ -26,7 +39,7 @@
                 Menos Tempo
             </a>
         </div>
-    </nav>
+    </nav>    
     <main>
         <table>
             <thead>
