--- a/memorygame/static/css/lbstyle.css
+++ b/memorygame/static/css/lbstyle.css
@@ -7,7 +7,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     font-family: Arial, sans-serif;
-    margin: 20px 0;
+    margin: 20px auto;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
