--- a/memorygame/static/css/style.css
+++ b/memorygame/static/css/style.css
@@ -137,28 +137,24 @@ footer p, header h1 {
         width: 100%;
     }
 
-    .nav-bar {
-        flex-direction: column;
-        align-items: stretch;
-        justify-content: center;
-        gap: 20px;
-    }
-
     .nav-bar > div {
         width: 100%;
     }
     
-    .navigation {
-        display: flex;
+    .nav-bar {
+        height: auto; /* Ajusta a altura para não ocupar 100vh */
+        padding: 10px;
         flex-direction: column;
-        align-items: center;
         gap: 10px;
     }
 
+    .navigation {
+        gap: 10px; /* Menos espaçamento entre os botões de navegação */
+    }
+
     .filter-buttons {
-        display: flex;
-        align-items: flex-start;
         gap: 10px;
+        margin-top: 20px;
     }
 }
 
@@ -173,18 +169,22 @@ footer p, header h1 {
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: end;
+    margin: 20px 0px;
 }
 
-/* Botões de navegação */
+.nav-bar {
+    height: 100%;
+}
+
 .nav-btn {
     display: flex;
     align-items: center;
     background-color: rgb(221, 144, 0);
     border: none;
     padding: 10px 15px;
-    margin-right: 10px;
     border-radius: 5px;
+    margin-right: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -193,13 +193,13 @@ footer p, header h1 {
     background-color: rgb(173, 113, 0);
 }
 
-.nav-btn i {
+.nav-btn i, form > button {
     font-size: 18px;
     color: #ffffff;
     margin-right: 10px;
 }
 
-.nav-btn a, form > button {
+.nav-btn a {
     text-decoration: none;
     color: #ffffff;
     font-weight: bold;
@@ -214,6 +214,7 @@ footer p, header h1 {
 .filter-buttons {
     display: flex;
     align-items: center;
+    margin: 0;
 }
 
 .filter-buttons .btn {
@@ -222,7 +223,6 @@ footer p, header h1 {
     background-color: rgb(179, 116, 0);
     color: #fff;
     border-radius: 5px;
-    margin-left: 10px;
     font-size: 14px;
     transition: background-color 0.3s ease;
 }
